--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
- 
+.selectedpost {
+  background: rgba(0,0,0,.2);
+} 
+.selectedbutton {
+  position: fixed;
+  bottom: 10px;
+}
   html,body{width:100%;height:100%}
   
   .ng-hide-add, .ng-hide-remove {
