--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,23 +13,23 @@ background: rgb(132,129,160);color:white">
 </div>
 
 <div class="col-md-3">
-<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p11.png" style="width:45%;">
+<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p11.png" style="width:45%; height: 100px">
 <p [innerHTML]="cont.textone"></p>
 </div>
 
 <div class="col-md-3">
-<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p21.png" style="width:50%;">
+<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p21.png" style="width:50%; height: 100px">
 <p [innerHTML]="cont.texttwo"></p>
 </div>
 
 <div class="col-md-3">
-<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p31.png" style="width:50%;">
+<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p31.png" style="width:50%; height: 100px">
 <p [innerHTML]="cont.textthree">
 </p>
 </div>
 
 <div class="col-md-3">
-<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p4.png" style="width:50%;">
+<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p4.png" style="width:50%; height: 100px">
 <p [innerHTML]="cont.textfour">
 </p>
 </div>
