--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,24 +13,24 @@ background: rgb(132,129,160);color:white">
 </div>
 
 <div class="col-md-3">
-<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p11.png" style="width:45%; height: 100px">
-<p [innerHTML]="cont.textone"></p>
+<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p11.png" style=" height: 100px">
+<p style="margin-top:1rem" [innerHTML]="cont.textone"></p>
 </div>
 
 <div class="col-md-3">
-<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p21.png" style="width:50%; height: 100px">
-<p [innerHTML]="cont.texttwo"></p>
+<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p21.png" style=" height: 100px">
+<p style="margin-top:1rem" [innerHTML]="cont.texttwo"></p>
 </div>
 
 <div class="col-md-3">
-<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p31.png" style="width:50%; height: 100px">
-<p [innerHTML]="cont.textthree">
+<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p31.png" style=" height: 100px">
+<p style="margin-top:1rem" [innerHTML]="cont.textthree">
 </p>
 </div>
 
 <div class="col-md-3">
-<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p4.png" style="width:50%; height: 100px">
-<p [innerHTML]="cont.textfour">
+<img src="http://diplom-invoice.ru/iskra/wp/wp-content/themes/iskra/p4.png" style=" height: 100px">
+<p style="margin-top:1rem" [innerHTML]="cont.textfour">
 </p>
 </div>
 
@@ -39,7 +39,7 @@ background: rgb(132,129,160);color:white">
 </div>
 
 
-<div id="scheme"  class="container-fluid" style="text-align:center;padding-bottom:35px;color:rgb(132,129,160);">
+<div id="scheme"  class="container-fluid" style="text-align:center;padding-bottom:35px;color:rgb(132,129,160); background:#eee">
 <div class="container">
 <div class="row">
 
